--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="fr">
 
 <head>
-	<meta charset="UTF-8" name="description" property="og:description" content="page photographe professionnel Nina Carducci Paris Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels">
-	<meta property="og:site_name" content="Nina Carducci photographe professionnel">
+	<meta charset="UTF-8">
+	<meta name="description"
+		content="Page photographe professionnel Nina Carducci Paris Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels">
+	<meta property="og:site_name" name="twitter:card" content="Nina Carducci photographe professionnel">
+	<meta property="og:type" content="website" />
+	<meta property="og:url" name="twitter:url" content="http://127.0.0.1:5500/Nina-Carducci-Dev/index.html" />
+	<meta property="og:title" name="twitter:title" content="Nina Carducci photographe professionnel" />
+	<meta property="og:description" name="twitter:description"
+		content="Découvrez mes services pour immortaliser vos moments au travers de mon regard, mon approche, ma technique." />
+	<meta name="twitter:site" content="@NinaCarducci" />
+
 	<title>Nina Carducci photographe</title>
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -14,17 +23,49 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
+
+	<!-- Rich Snippet JSON-LD pour la localisation de l'entreprise -->
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci Photographe",
+		  "url": "http://127.0.0.1:5500/Nina-Carducci-Dev/index.html",
+		  "description": "Photographe professionnel spécialisé dans les portraits, mariages et événements à Paris.",
+		  "address": {
+		    "@type": "PostalAddress",
+		    "streetAddress": "Adresse complète du photographe", 
+		    "addressLocality": "Paris",
+		    "postalCode": "75000",
+		    "addressCountry": "FR"
+		  },
+		  "telephone": "+33 1 23 45 67 89",
+		  "email": "contact@ninacarducci.com",
+		  "geo": {
+		    "@type": "GeoCoordinates",
+		    "latitude": 48.8566,
+		    "longitude": 2.3522
+		  },
+		  "openingHours": "Mo-Sa 09:00-18:00",
+		  "sameAs": [
+		    "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+		    "https://www.linkedin.com/in/nina-carducci"
+		  ],
+		  "priceRange": "€€€"
+		}
+	</script>
+
 </head>
 
 <body>
 	<header>
 		<div class="top-header">
-			<h2 class="name">Nina Carducci</h2>
+			<h1 class="name">Nina Carducci</h1>
 			<nav class="nav">
 				<ul>
 					<li><a href="#about">À propos</a></li>
@@ -32,7 +73,7 @@
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.png" alt="#"></a></li>
+							target="_blank"><img src="assets/images/instagram.png" alt="Logo instagram"></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -50,15 +91,15 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
-							alt="#">
+							alt="PhotoHommeEnNoir">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-							alt="#">
+							alt="PhotoPublics">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-							alt="#">
+							alt="PhotoDeMariage">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -75,7 +116,7 @@
 		</div>
 		<div id="about">
 			<div class="picture left">
-				<img src="./assets/images/nina.webp" class="d-block w-100" alt="#">
+				<img src="./assets/images/nina.webp" class="d-block w-100" alt="PhotoDeNinaCaducci">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -93,94 +134,105 @@
 	</header>
 
 	<main>
-		<div id="gallery">
+		<article id="gallery">
 			<h2 class="title">Portfolio</h2>
-			<div class="container py-3">
+			<section class="container py-3">
 				<div class="gallery" style="display: none">
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						alt="PhotoAaronPaul" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						alt="PhotoAliMorshedlou" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						alt="PhotoJasonGoodman" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						alt="PhotoHannahBusing" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						alt="PhotoAdeTunji" />
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						alt="PhotoJakobOwens" />
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
+						alt="PhotoNinoVan" />
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="#" />
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						alt="PhotoAustinNeill" />
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="#" />
+						alt="PhotoMateusCampos" />
 				</div>
-			</div>
-			<div class="quote">
+			</section>
+
+			<section class="quote">
 				<figure>
 					<blockquote>
-						<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+						<h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
 							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
 							vérité.
-						</h1>
+						</h2>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
-			</div>
-		</div>
-		<div id="services">
+			</section>
+		</article>
+
+		<article id="services">
 			<h2 class="title">Mes services</h2>
 			<div class="container">
 				<div class="service">
-					<div class="service__description">
+					<section class="service__description">
 						<h2>Shooting photo</h2>
 						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
 							en
 							Île-de-France pour réaliser vos photos</p>
-					</div>
-					<div class="service__price">
+					</section>
+					<section class="service__price">
 						<h2>350€/demi journée</h2>
 						<span>Matériel, déplacement inclus</span>
-					</div>
+					</section>
 
 				</div>
 				<div class="service">
-					<div class="service__description">
+					<section class="service__description">
 						<h2>Retouches</h2>
 						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
 							optimal pour vos publications</p>
-					</div>
-					<div class="service__price">
+					</section>
+					<section class="service__price">
 						<h2>50€/photo</h2>
 						<span>2 AR par photo</span>
-					</div>
+					</section>
 				</div>
 				<div class="service">
-					<div class="service__description">
+					<section class="service__description">
 						<h2>Album photos</h2>
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
 							un
 							album photo personnalisé</p>
-					</div>
-					<div class="service__price">
+					</section>
+					<section class="service__price">
 						<h2>400€ album A4</h2>
 						<span>30 pages recto/verso</span>
-					</div>
+					</section>
 				</div>
 			</div>
-		</div>
-		<div class="quote">
+		</article>
+
+		<article class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+					<h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</div>
+		</article>
 	</main>
 
 	<footer>
@@ -200,7 +252,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.webp" class="d-block w-100" alt="#">
+					<img src="./assets/images/camera.webp" class="d-block w-100" alt="PhotoAppareilPhoto">
 				</div>
 			</div>
 		</div>
