projet final Nina Carducci

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 		  "description": "Photographe professionnel spécialisé dans les portraits, mariages et événements à Paris.",
 		  "address": {
 		    "@type": "PostalAddress",
-		    "streetAddress": "Adresse complète du photographe", 
-		    "addressLocality": "Paris",
-		    "postalCode": "75000",
+		    "streetAddress": "68 avenue Alsace-Lorraine", 
+		    "addressLocality": "Bordeaux",
+		    "postalCode": "33200",
 		    "addressCountry": "FR"
 		  },
-		  "telephone": "+33 1 23 45 67 89",
+		  "telephone": "+33 05 56 67 78 89",
 		  "email": "contact@ninacarducci.com",
 		  "geo": {
 		    "@type": "GeoCoordinates",
